After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 746064 - [PATCH] "sticky" window state reported wrongly on X11
[PATCH] "sticky" window state reported wrongly on X11
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Backend: X11
2.24.x
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2015-03-12 02:27 UTC by John Lindgren
Modified: 2015-03-12 21:31 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix problems with sticky handling (1.32 KB, patch)
2015-03-12 02:27 UTC, John Lindgren
committed Details | Review

Description John Lindgren 2015-03-12 02:27:06 UTC
Created attachment 299144 [details] [review]
Fix problems with sticky handling

Please backport the fix of bug #666842 (Git commit 01320e577376) to 2.24.

Downstream report:
http://redmine.audacious-media-player.org/issues/519